# PlatoRobot

./: .gitignore  README.md  cartographer.rosinstall  install_cartographer.sh  install_plato.sh  run_all_tests.sh  run_gazebo.sh  run_rviz.sh
plato_api/: constants.py
plato_arduino/: plato_arduino.ino
plato_control/: CMakeLists.txt  package.xml
plato_control/config/: plato_control.yaml
plato_control/launch/: plato_control_keyboard.launch  plato_real.launch  plato_real_explorer.launch  plato_real_objects.launch  plato_simulator.launch  plato_simulator_explorer.launch  plato_simulator_follower.launch  plato_simulator_objects.launch  pure_camera.launch  pure_darknet.launch
plato_control/src/: control_joy_gui.py  control_joy_ros.py  control_keyboard.py  control_keyboard_gui.py  control_voice.py  gui_utils.py  is_moving.py  open_port.py  plot_odom_points.py  publish_cmd_vel.py  publish_data.py  publish_goal.py  publish_goals.py  publish_odometry.py  subscribe_control.py  transform_to_pose.py
plato_control/src/test/: publish_data_test.py
plato_description/: CMakeLists.txt  package.xml
plato_description/meshes/: plato.dae
plato_description/urdf/: materials.xacro  parameters.xacro  plato.urdf  plato.xacro  plato_gazebo.xacro  utils.xacro
plato_description/urdf/body_parts/: body_box.urdf.xacro  caster_wheel.urdf.xacro  wheel.urdf.xacro
plato_description/urdf/sensors/: VLP-16.urdf.xacro  bumper.urdf.xacro  camera.urdf.xacro  hokuyo.urdf.xacro  imu.urdf.xacro  sonar.urdf.xacro
plato_drivers/Example_code/RB004_2WD_PID_3SONAR/: RB004_2WD_PID_3SONAR.ino
plato_drivers/Nexus_robot_libraries/SONAR/: SONAR.cpp
plato_follower/: CMakeLists.txt  package.xml
plato_follower/launch/: plato_darknet.launch  point_cloud_on_image.launch  test_darknet.launch  web_server.launch
plato_follower/scripts/: darknet.py  follow_me.py  plato_object_detector_webcam.py  points_on_image.py  snapshot_taker.py  test_darknet.py
plato_follower/src/: convert_pointcloud.cpp
plato_gazebo/: CMakeLists.txt  package.xml
plato_gazebo/launch/: plato_cafe.launch  plato_garage.launch  plato_world.launch  rviz.launch  spawn_person.launch
plato_gazebo/rviz/: plato.rviz
plato_gazebo/test/: gazebo_test.launch  gazebo_test.py
plato_gazebo/worlds/: cafe.world  plato.world
plato_hololens/: CMakeLists.txt  package.xml
plato_hololens/data/: hololens.pcd  plato.pcd
plato_hololens/launch/: object_detector3D.launch  plato_pose_estimation.launch
plato_hololens/msg/: BoolStamped.msg  DenseHuman.msg  DenseHumans.msg  DenseImagePose.msg  Human.msg  HumanBodyPart.msg  Humans.msg  MyObject.msg  MyObjects.msg
plato_hololens/scripts/: change_frame_id.py  match_point_clouds.py  match_point_clouds_from_bag.py  match_point_clouds_pcd.py  send_person_photo.py  send_test_points.py  test_openpose.py  transformations.py
plato_hololens/src/: merge_pointcloud_and_image.cpp
plato_map_comparison/: compare_maps.py  compare_maps_icp.py  create_map.py  parse_points.py  remove_unknown.py  room_318.txt
plato_navigation/: .keyboard_control.py.swp
plato_navigation/amcl_nav/: CMakeLists.txt  package.xml
plato_navigation/amcl_nav/config/: .costmap_common_params.yaml.swp  base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
plato_navigation/amcl_nav/launch/: amcl_demo.launch  amcl_rrt.launch
plato_navigation/amcl_nav/rviz/: amcl.rviz
plato_navigation/cartographer_nav/: CMakeLists.txt  package.xml
plato_navigation/gmapping_nav/: CMakeLists.txt  package.xml
plato_navigation/gmapping_nav/launch/: gmapping.launch  gmapping_from_bag.launch  rrt_exploration_gmapping.launch
plato_navigation/gmapping_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml
plato_navigation/gmapping_nav/rviz/: gmapping_rviz.rviz  gmapping_rviz_bag.rviz  gmapping_rviz_real_without_odom.rviz  plato_gmapping.rviz  rrt_exploring.rviz
plato_navigation/hector_nav/: CMakeLists.txt  package.xml
plato_navigation/move_base_nav/: CMakeLists.txt  package.xml
plato_remote_control/: CMakeLists.txt  package.xml
plato_remote_control/launch/: web.launch
plato_remote_control/media/: index.html  style.css
plato_remote_control/scripts/: main.py  map_to_img_LS.py  map_to_img_OG.py
(+43 files in other folders)
