<?xml version="1.0"?>
<package format="2">
    <name>plato_description</name>
    <version>0.0.0</version>
    <description>The plato_description package</description>

    <maintainer email="r.yagfarov@innopolis.ru">Rauf Yagfarov</maintainer>
    <author email="r.yagfarov@innopolis.ru">Rauf Yagfarov</author>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>
