<?xml version="1.0"?>
<package format="2">
    <name>plato_remote_control</name>
    <version>0.0.0</version>
    <description>The plato_remote_control package</description>

    <maintainer email="m.ivanov@innopolis.ru">Mike Ivanov</maintainer>
    <author email="m.ivanov@innopolis.ru">Mike Ivanov</author>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>
